--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -13,4 +13,5 @@
 
         <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
+    <p><a href="{{ path('app_incomes_list') }}">Retour</a></p>
 {% endblock body %}
