--- a/app/assets/components/shell/sidebar.module.css
+++ b/app/assets/components/shell/sidebar.module.css
@@ -1,69 +1,35 @@
 .navbar {
+  width: rem(80px);
   height: 100vh;
-  width: rem(300px);
   padding: var(--mantine-spacing-md);
   display: flex;
   flex-direction: column;
-  background-color: var(--mantine-color-blue-filled);
+  border-right: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
 
 .navbarMain {
   flex: 1;
-}
-
-.header {
-  padding-bottom: var(--mantine-spacing-md);
-  margin-bottom: calc(var(--mantine-spacing-md) * 1.5);
-  border-bottom: rem(1px) solid var(--mantine-color-blue-7);
-}
-
-.footer {
-  padding-top: var(--mantine-spacing-md);
-  margin-top: var(--mantine-spacing-md);
-  border-top: rem(1px) solid var(--mantine-color-blue-7);
-}
-
-.version {
-  background-color: var(--mantine-color-blue-7);
-  color: var(--mantine-color-white);
+  margin-top: rem(20px);
 }
 
 .link {
+  width: rem(50px);
+  height: rem(50px);
+  border-radius: var(--mantine-radius-md);
   display: flex;
   align-items: center;
-  text-decoration: none;
-  font-size: var(--mantine-font-size-sm);
-  color: var(--mantine-color-white);
-  padding: var(--mantine-spacing-xs) var(--mantine-spacing-sm);
-  border-radius: var(--mantine-radius-sm);
-  font-weight: 500;
+  justify-content: center;
+  color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
 
-  @mixin hover {
-    background-color: var(--mantine-color-blue-7);
-    color: var(--mantine-color-white);
-
-    .linkIcon {
-      color: var(--mantine-color-white);
-    }
+  &:hover {
+    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-5));
   }
 
   &[data-active] {
     &,
     &:hover {
-      box-shadow: var(--mantine-shadow-sm);
-      background-color: var(--mantine-color-white);
-      color: var(--mantine-color-blue-filled);
-
-      .linkIcon {
-        color: var(--mantine-color-blue-filled);
-      }
+      background-color: var(--mantine-color-blue-light);
+      color: var(--mantine-color-blue-light-color);
     }
   }
-}
-
-.linkIcon {
-  color: var(--mantine-color-blue-1);
-  margin-right: var(--mantine-spacing-sm);
-  width: rem(25px);
-  height: rem(25px);
 }
