--- a/app/assets/components/ui/sidebar.module.css
+++ b/app/assets/components/ui/sidebar.module.css
@@ -2,9 +2,13 @@
   width: rem(80px);
   height: 100vh;
   padding: var(--mantine-spacing-md);
+  margin-left: var(--mantine-spacing-xs);
+  margin-top: var(--mantine-spacing-xs);
+  margin-bottom: var(--mantine-spacing-xs);
   display: flex;
   flex-direction: column;
-  border-right: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+  background-color: light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-5));
+  border-radius: 10px;
 }
 
 .navbarMain {
@@ -22,7 +26,7 @@
   color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
 
   &:hover {
-    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-5));
+    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-3));
   }
 
   &[data-active] {
