--- a/app/assets/features/budgets/pages/list.module.css
+++ b/app/assets/features/budgets/pages/list.module.css
@@ -1,23 +1,3 @@
-.editButton {
-  cursor: pointer;
-}
-
-[data-mantine-color-scheme='dark'] .editButton {
-  background-color: var(--mantine-color-dark-5);
-
-  @mixin hover {
-    background-color: var(--mantine-color-dark-7);
-  }
-}
-
-[data-mantine-color-scheme='light'] .editButton {
-  background-color: var(--mantine-color-gray-1);
-
-  @mixin hover {
-    background-color: var(--mantine-color-gray-0);
-  }
-}
-
 .subTitle {
   font-size: 0.9rem;
 }
@@ -29,6 +9,14 @@
 
 .amount {
   text-align: center;
+}
+
+.deleteButton {
+  cursor: pointer;
+
+  &:hover {
+    background-color: var(--mantine-color-gray-3);
+  }
 }
 
 [data-mantine-color-scheme='dark'] .expensesBadge {
@@ -51,7 +39,7 @@
   color: #3cb371;
 }
 
-.link {
+.linkItem {
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -87,6 +75,48 @@
 
 .linkIcon {
   color: var(--mantine-color-blue-light-color);
+  padding: rem(5px);
+  width: rem(30px);
+  height: rem(30px);
+}
+
+.deleteItem {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: var(--mantine-font-size-sm);
+  color: var(--mantine-color-red-light-color);
+  border-radius: var(--mantine-radius-md);
+  font-weight: 500;
+  margin-top: var(--mantine-spacing-xs);
+  background-color: var(--mantine-color-red-light);
+  width: rem(80px);
+  height: rem(35px);
+
+  @mixin hover {
+    background-color: light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-6));
+    color: var(--mantine-color-red-light-color);
+
+    .linkIcon {
+      color: var(--mantine-color-red-light-color);
+    }
+  }
+
+  &[data-active] {
+    &,
+    &:hover {
+      background-color: var(--mantine-color-red-light);
+      color: var(--mantine-color-red-light-color);
+
+      .deleteIcon {
+        color: var(--mantine-color-red-light-color);
+      }
+    }
+  }
+}
+
+.deleteIcon {
+  color: var(--mantine-color-red-light-color);
   padding: rem(5px);
   width: rem(30px);
   height: rem(30px);
