--- a/app/assets/features/budgets/components/budget-table.module.css
+++ b/app/assets/features/budgets/components/budget-table.module.css
@@ -1,53 +1,15 @@
-.title {
-  transform: translateY(0.33rem);
+.resourceName {
+  font-size: 1rem;
+  font-weight: 600;
 }
 
-.editModeButton {
-  transform: translateY(0.1rem);
+.categoryBlock {
+  background-color: var(--mantine-color-gray-1);
 }
 
-.editModeButton:hover {
-  background-color: var(--mantine-color-gray-3);
-}
-
-.divIconBlue {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  font-size: var(--mantine-font-size-sm);
-  color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-1));
-  border-radius: var(--mantine-radius-md);
-  font-weight: 500;
-
-  @mixin hover {
-    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
-    color: var(--mantine-color-blue-light-color);
-
-    .iconBlue {
-      color: var(--mantine-color-blue-light-color);
-    }
-  }
-
-  &[data-active] {
-    &,
-    &:hover {
-      background-color: var(--mantine-color-blue-light);
-      color: var(--mantine-color-blue-light-color);
-
-      .iconBlue {
-        color: var(--mantine-color-blue-light-color);
-      }
-    }
-  }
-}
-
-.iconBlue {
-  color: var(--mantine-color-blue-light-color);
-  background-color: var(--mantine-color-blue-light);
-  padding: rem(5px);
-  border-radius: 5px;
-  width: rem(30px);
-  height: rem(30px);
+.categoryName {
+  padding: 0.5rem;
+  border-radius: 4px;
 }
 
 .divIconGreen {
