--- a/app/assets/features/budgets/components/budget-table.module.css
+++ b/app/assets/features/budgets/components/budget-table.module.css
@@ -91,3 +91,43 @@
   width: rem(30px);
   height: rem(30px);
 }
+
+.divIconBlue {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: var(--mantine-font-size-sm);
+  color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-1));
+  border-radius: var(--mantine-radius-md);
+  font-weight: 500;
+
+  @mixin hover {
+    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
+    color: var(--mantine-color-blue-light-color);
+
+    .iconBlue {
+      color: var(--mantine-color-blue-light-color);
+    }
+  }
+
+  &[data-active] {
+    &,
+    &:hover {
+      background-color: var(--mantine-color-blue-light);
+      color: var(--mantine-color-blue-light-color);
+
+      .iconBlue {
+        color: var(--mantine-color-blue-light-color);
+      }
+    }
+  }
+}
+
+.iconBlue {
+  color: var(--mantine-color-blue-light-color);
+  background-color: var(--mantine-color-blue-light);
+  padding: rem(5px);
+  border-radius: 5px;
+  width: rem(30px);
+  height: rem(30px);
+}
