--- a/app/assets/features/budgets/pages/list.module.css
+++ b/app/assets/features/budgets/pages/list.module.css
@@ -5,7 +5,9 @@
   font-weight: 500;
   margin-top: var(--mantine-spacing-xs);
   background-color: var(--mantine-color-blue-light);
-  width: rem(80px);
+  width: auto;
+  height: auto;
+  padding: 0.2rem 0.5rem;
   transform: translateY(0.33rem);
 
   @mixin hover {
@@ -23,7 +25,7 @@
   padding: rem(2.5);
 }
 
-.deleteItem {
+.modalItem {
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -33,8 +35,9 @@
   font-weight: 500;
   margin-top: var(--mantine-spacing-xs);
   background-color: var(--mantine-color-red-light);
-  width: rem(80px);
-  height: rem(35px);
+  width: auto;
+  height: auto;
+  padding: 0.33rem 0.75rem 0.33rem 0.5rem;
 
   @mixin hover {
     background-color: light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-6));
@@ -46,7 +49,7 @@
   }
 }
 
-.deleteIcon {
+.modalIcon {
   color: var(--mantine-color-red-light-color);
   padding: rem(5px);
   width: rem(30px);
