--- a/app/assets/features/budgets/components/budget-form.module.css
+++ b/app/assets/features/budgets/components/budget-form.module.css
@@ -49,3 +49,11 @@
 .removeBudgetLineIcon:hover {
   color: #f87171;
 }
+
+.shadowButton {
+  box-shadow: var(--mantine-shadow-sm);
+}
+
+.formButton:hover {
+  background-color: var(--mantine-color-gray-1);
+}
