--- a/app/assets/features/budgets/pages/list.module.css
+++ b/app/assets/features/budgets/pages/list.module.css
@@ -24,3 +24,11 @@
   color: var(--mantine-color-blue-light-color);
   padding: rem(2.5);
 }
+
+[data-mantine-color-scheme='dark'] .chevron {
+  color: var(--mantine-color-light-6);
+}
+
+[data-mantine-color-scheme='light'] .chevron {
+  color: var(--mantine-color-dark-6);
+}
