--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -2,7 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock title %}</title>
+        <title>{% block title %}Mybudget{% endblock title %}</title>
+        <meta
+            name="viewport"
+            content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no shrink-to-fit=no"
+        />
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
             {{ vite_entry_link_tags('app') }}
