--- a/app/assets/features/accounts/pages/list.module.css
+++ b/app/assets/features/accounts/pages/list.module.css
@@ -11,7 +11,7 @@
   transform: translateY(0.33rem);
 
   @mixin hover {
-    background-color: light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-6));
+    background-color: var(--mantine-color-gray-2);
     color: var(--mantine-color-blue-light-color);
 
     .linkIcon {
