--- a/app/assets/features/budgets/components/budget-form.module.css
+++ b/app/assets/features/budgets/components/budget-form.module.css
@@ -2,7 +2,7 @@
   width: 100vh;
   left: 0;
   position: absolute;
-  color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
+  color: var(--mantine-color-gray-0);
 }
 
 .categoryName {
