--- a/app/assets/index.css
+++ b/app/assets/index.css
@@ -1,9 +1,3 @@
-/* For light mode */
-:root[data-mantine-color-scheme='light'] {
+:root {
   --mantine-color-body: var(--mantine-color-gray-1) !important;
-}
-
-/* For dark mode */
-:root[data-mantine-color-scheme='dark'] {
-  --mantine-color-body: #282827 !important;
 }
