--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -7,7 +7,8 @@
             name="viewport"
             content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no shrink-to-fit=no"
         />
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link rel="manifest" href="/manifest.json" />
+        <link rel="icon" href="/favicon.ico" />
         {% block stylesheets %}
             {{ vite_entry_link_tags('app') }}
         {% endblock stylesheets %}
