--- a/app/assets/components/sidebar.module.css
+++ b/app/assets/components/sidebar.module.css
@@ -56,3 +56,14 @@
   width: rem(30px);
   height: rem(30px);
 }
+
+.navbarContent {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer {
+  margin-bottom: 1rem;
+}
